tests/fixtures/dimensions/change_blast_radius/bad/u8.ts
import { core } from "./core";
export const u8 = core + 8;
